<resources>
    <string name="app_name">Taxi Pro</string>
    <string name="three_tariffs">Три тарифа на выбор, простая регистрация, все агрегаторы в одном сервисе</string>
    <string name="taxi_pro">Такси Про</string>
    <string name="mobile_taxi">Мобильный таксопарк</string>
    <string name="profitable">Выгодно. Быстро. Удобно</string>
    <string name="choosing_a_comfortable_tariff">Выбор комфортного тарифа</string>
    <string name="favorable_rates">Выгодные тарифы,которые были продуманы с учетом потребностей водителей.</string>
    <string name="instant_payments">Моментальные выплаты</string>
    <string name="instant_withdrawal">Мгновенный вывод средств на карту в тарифах Премиум и Старт</string>
    <string name="all_aggregators_in_one_place">Все агрегаторы в одном месте</string>
    <string name="convenient_revenue">Удобное управлене доходами</string>
    <string name="easily_track_balance">Легко отслеживать баланс по всем агрегаторам</string>
    <string name="our_rates">Наши тарифы</string>
    <string name="quick_registration">Быстрая регистрация в агрегаторах</string>
    <string name="convenient_view">Удобный просмотр баланса и опции вывода денег на карту</string>
    <string name="login_from_any_device">Вход с любых устройств - не нужно приложение</string>
    <string name="live_chat">Круглосуточная поддержка в чате</string>
    <string name="gett_uber">Подключиться к любому агрегатору: Яндекс Такси, Gett, Uber, Ситимобил</string>
    <string name="we_work_with_drivers">Работаем с водителями такси с 2016 года</string>
    <string name="open"><u>Войти</u></string>
    <string name="registration">Зарегистрироваться</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_phone">Введите телефон</string>
    <string name="enter_code">Введите код</string>
    <string name="phone_call">На Ваш телефон поступит звонок</string>
    <string name="enter_the_last_4_digits">Введите последние 4 цифры номера телефона.</string>
    <string name="code_3555">Например, позвонил +7 999 488 3555 Код 3555</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="for_further_work">Для дальнейшей работы на платформе Вам необходимо заполнить все данные и загрузить документы.</string>
    <string name="you_can_fill_in_the_data">Вы можете заполнить данные сейчас или вернуться к этому позже</string>
    <string name="required_documents">Необходимые документы:</string>
    <string name="pasport">паспорт</string>
    <string name="drivers_license">водительское удостоверение</string>
    <string name="vehicle_reg_certif">свидетельство регистрации автомобиля</string>
    <string name="fill">Заполнить</string>
    <string name="get_code">Получить код</string>
    <string name="get_rgb">rgb(251,187,5)</string>
    <string name="collapse">Свернуть</string>
    <string name="more_details">Подробнее</string>
    <string name="o_p_per_month">O Р в месяц +\n3 % от суммы вывода</string>
    <string name="start">Старт</string>
    <string name="choose">Выбрать</string>
    <string name="personal_data_protection">Защита личных данных</string>
    <string name="direct_connection">Прямое подключение водителей к агрегаторам</string>
    <string name="no_percent_of_order">Никаких процентов от заказа - только абонентская плата</string>
    <string name="choose_tariff">Выберите тариф</string>
    <string name="comfort">Комфорт</string>
    <string name="four_hundred_monthly_fee">490 абонентская плата +\n410 комиссия банка</string>
    <string name="nine_hundred_monthly_fee">990 абонентская плата +\n410 комиссия банка</string>
    <string name="premium">Премиум</string>
    <string name="unlimited_instant_payments">Безлимитные моментальные платежи в любое время</string>
    <string name="optimal_rate">Оптимальный тариф для активных водителей</string>
    <string name="from_cash_orders">С наличных заказов не берём комиссию</string>
    <string name="choose_a_tariff">Выбрать тариф</string>
    <string name="service_is_tree">Обслуживание бесплатно, если тратить все деньги на АЗС</string>

    <string name="select_taxi_aggregators">Выберите агрегаторы такси, через которые Вы будете работать</string>
    <string name="windraw_funds">Вывод средств</string>
    <string name="balance">Баланс</string>
    <string name="my_data">Мои данные</string>
    <string name="constantinople_vyacheslav">Константинопольский Вячеслав Геннадьевич</string>
    <string name="my_tariff">Мой тариф</string>
    <string name="my_auto">Мой автомобиль</string>

    <string name="input_all_field">Заполните все пустые поля</string>
    <string name="passport_data">Паспортные данные (паспорт РФ)</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="data_of_birth">Дата рождения</string>
    <string name="seria_and_number_of_passport">Серия и номер паспорта</string>
    <string name="who_issued">Кем выдан</string>
    <string name="when_issued">Дата выдачи</string>
    <string name="address_of_registration">Адрес регистрации</string>
    <string name="city">Город</string>
    <string name="district">Район(если есть)</string>
    <string name="street">Улица</string>
    <string name="home">Дом</string>
    <string name="apartments">Квартира</string>
    <string name="next">Далее</string>
    <string name="save_new_tariff">Сохранить новый тариф</string>

    <string name="send_foto">Отправить фотографии</string>
    <string name="caution_make_sure">Убедитесь, что нет бликов, <br/>и все данные хорошо видны</string>
    <string name="prepare_photo">Подготовьте фотографии<br/> ваших документов</string>
    <string name="you_can_open_camera">Вы можете открыть камеру<br/> и сфотографировать документы
        <br/>или загрузить готовые фото</string>
    <string name="required_text">Потребуется:</string>
    <string name="passport_bullet_text">Паспорт</string>
    <string name="drivers_license_bullet_text">Водительское удостоверение</string>
    <string name="passport_regulations">-разворот с фотографией<br/>-страница с регистрацией</string>
    <string name="driver_licence_regulations">-лицевая сторона<br/>-оборотная сторона</string>
    <string name="add_photo">Добавить фотографию</string>
    <string name="add_photos">Добавьте фотографии</string>
    <string name="send_photos">Отправить фотографии</string>
    <string name="passport_caps_first_letter">Паспорт</string>
    <string name="driver_license_caps_first_letter">Водительское удостоверение</string>
    <string name="passport_face">Разворот с<br/>фотографией</string>
    <string name="passport_registration_page">Страница с<br/>регистрацией</string>
    <string name="drivers_license_left_side">Лицевая сторона</string>
    <string name="drivers_license_back_side">Обратная сторона</string>
    <string name="step">Шаг</string>
    <string name="current_step">6</string>
    <string name="total_steps">/6</string>

    <string name="driver_data">Данные водительского удостоверения</string>
    <string name="driver_issued_to">Срок выдачи</string>
    <string name="driver_numbers">Серия и номер В.У.</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="serial_and_number_of_passport">Серия и номер паспорта</string>
    <string name="passport">Паспорт</string>
    <string name="certificate_number">Номер свидетельства Т.С.</string>
    <string name="car_win">WIN</string>
    <string name="car_number">Регистрационный знак</string>
    <string name="car_color">Цвет автомобиля</string>
    <string name="car_year">Год выпуска</string>
    <string name="car_model">Модель автомобиля</string>
    <string name="car_brand">Марка автомобиля</string>
    <string name="car_data">Данные Т.С.</string>
    <string name="car_license">Данные лицензии</string>
    <string name="license_number">Номер лицензии</string>

    <string name="withdraw_money">Вывести деньги</string>
    <string name="overall_balance">Общий баланс</string>
    <string name="select_aggregetor">Выберите агрегатор</string>
    <string name="choose_where_translate">Выберите, куда переводить</string>
    <string name="back">Назад</string>
    <string name="total_amount">Общая сумма</string>


<!--    check_input_data_fragment-->
    <string name="change">Изменить</string>
    <string name="phone_number">Номер телефона</string>
    <string name="send_data">Отправить данные</string>
    <string name="tariff">Тариф</string>
    <string name="aggregators">Агрегаторы</string>
    <string name="passport_dates">Паспортные данные</string>
    <string name="data_of_driver">Данные В.У.</string>
    <string name="data_of_car">Данные Т.С.</string>

    <string name="choose_tariff_start">Выбрать тариф Старт</string>
    <string name="choose_tariff_comfort">Выбрать тариф Комфорт</string>
    <string name="choose_tariff_premium">Выбрать тариф Премиум</string>
    <string name="data_sent_verification">Данные отправлены на проверку</string>

    <string name="ChoiceData">Проверьте данные</string>

<!--    Exit dialog-->
    <string name="exit_dialog">Вы действительно желаете выйти?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="car_data_model">Марка автомобиля</string>
    <string name="car_data_type">Модель автомобиля</string>
    <string name="car_data_year">Год производства автомобиля</string>
    <string name="car_data_color">Цвет автомобиля</string>
    <string name="car_data_number">Регистрационный знак ТС</string>
    <string name="car_number_pts">Регистрационный знак ТС</string>
    <string name="car_data_vin">Номер свидетельства ТС</string>
    <string name="car_data_license">ДАННЫЕ ЛИЦЕНЗИИ</string>
    <string name="car_data_license_number">Номер лицензии</string>
    <string name="address">Адрес регистрации</string>
    <string name="error_empty_field">Пожалуйста, заполните поле.</string>
    <string name="error_current_date">Пожалуйста, введите корректную дату.</string>

    <!--    Car data-->


</resources>