<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/DescriptionEnterCodeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_all_field" />

            <TextView
                style="@style/DescriptionTableStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/car_data" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_brand_layout"
                style="@style/InputFieldStyle"
                android:hint="@string/car_brand">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_model_layout"
                style="@style/InputFieldStyle"
                android:hint="@string/car_model">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_color_layout"
                style="@style/InputFieldStyle"
                android:hint="@string/car_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_number_layout"
                style="@style/InputFieldStyle"
                android:hint="@string/car_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="9"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_win_layout"
                style="@style/InputFieldStyle"
                android:hint="@string/car_win">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_win"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="17"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_certificate_layout"
                style="@style/InputFieldStyle"
                android:hint="@string/certificate_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_certificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789 "
                    android:inputType="numberDecimal"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_year_layout"
                    style="@style/InputFieldStyle"
                    android:hint="@string/car_year">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/car_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/DescriptionTableStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/car_license" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/license_number_layout"
                style="@style/InputFieldStyle"
                android:hint="@string/license_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/license_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789 "
                    android:inputType="numberDecimal"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_next"
                style="@style/AppButton"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/next" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>